v0.4
-Problem with missing templates on server fixed, server project root is home/ but local project root is /home/mycrm
-user can now add comment
-simplecrmmailing, app send email to users forget password action,

Bugs:
-Many commits on master branch dissapear ...